# halide_project

src/: CMakeLists.txt  main.cpp
src/bar/: CMakeLists.txt  bar_interface.cpp  bar_interface.h  run_bar.cpp
src/foo/: CMakeLists.txt  foo_generator.cpp  foo_interface.cpp  foo_interface.h  run_foo.cpp
